Closed Bug 1553555 Opened 6 years ago Closed 6 years ago

Release RemoteDecoderChild on manager thread in the case of an InitIPDL error

Categories

(Core :: Audio/Video: Playback, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox69 --- fixed

People

(Reporter: mjf, Assigned: mjf)

References

Details

Attachments

(1 file)

If the call to RemoteAudioDecoder::InitIPDL, here[1], or RemoteVideoDecoder::InitIPDL, here[2], fails, we can't just let the RefPtr go out of scope at the end of the method because it releases the Remote{Audio|Video}Decoder on the incorrect thread.

[1] https://searchfox.org/mozilla-central/source/dom/media/ipc/RemoteDecoderModule.cpp#99
[2] https://searchfox.org/mozilla-central/source/dom/media/ipc/RemoteDecoderModule.cpp#129

Assignee: nobody → mfroman
Priority: -- → P2
Blocks: 1550567
Pushed by mfroman@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/cc3a8d21e2cb Release RemoteDecoderChild on manager thread in the case of an InitIPDL error. r=jya
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: