Bug 1553555 - Release RemoteDecoderChild on manager thread in the case of an InitIPDL error. r=jya

Differential Revision: https://phabricator.services.mozilla.com/D32178